# learn_2d_opengl_3.3

./: CMakeLists.txt
include/: Shader.hpp  includes.hpp
include/glad/: glad.h
shaders/: fragment.fs  vertex.vs
src/: Shader.cpp  glad.c  main.cpp
